Made about page. Need to fix MoveInWhenVisibleSkills()

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
   z-index: 2;
   position: relative;
   transition: top 0s ease-in-out;
+  border-bottom: 5px #00b5c2 solid;
 }
 
 .navbar.fixed {
@@ -24,6 +25,7 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 20pt;
+  font-family: 'Urbanist';
   cursor: pointer;
 }
 
