--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,9 +1,91 @@
-.container {
+.about-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
     position: relative;
     padding-top: 90px;
-    height: 110vh;
+    padding-bottom: 50px;
+}
+
+.about-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    overflow: scroll;
+    border: 1px solid black;
+}
+
+.about {
+    font-family: 'Urbanist';
+    font-size: 40pt;
+    margin-bottom: 10px;
+    color: #444649;
+}
+
+.about-underline {
+    width: 100px;
+    height: 4px;
+    background-color: #444649;
+}
+
+.about-content {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.bio {
+    margin-top: 70px;
+    width: 47%;
+    padding: 0 20px;
+    font-family: 'Urbanist';
+    font-size: 27pt;
+    text-align: justify;
+    border: 1px solid black;
+}
+
+.skills {
+    margin-top: 70px;
+    width: 47%;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-items: center;
+    text-align: justify;
+    border: 1px solid black;
+}
+
+.skill {
+    font-size: 30pt;
+    font-family: 'Urbanist';
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    gap: 10px;
+    width: 50%;
+}
+
+.skill p {
+    margin: 0;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+    font-size: 40pt;
+}
+
+.icon-circle {
+    width: 90px;
+    height: 90px;
+    background-color: #00b5c2;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
