--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,8 +1,8 @@
-.project-container {
+.contact-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #F8F8F8;
+    background-color: white;
     position: relative;
     padding-top: 90px;
     height: 110vh;
